# verse-mcp

./: .gitignore  ADDING.md  AGENTS.md  Cargo.toml  POC.md  README.md  fortnite-docs-recursive-urls.txt  improve.md  install.ps1  install.sh  lib.rs  lib_internal.rs  main.rs  mcp_main.rs  plan-index.md  plan.md  result.json  rust-plan-claude.md  rust-plan-codex.md  scan-verse.js  types.rs  verse-api-recursive-urls.txt
.beads/: issues.jsonl
.beads/.br_history/: issues.20260304_225355.jsonl  issues.20260304_230824.jsonl  issues.20260304_232114.jsonl
.github/workflows/: ci.yml  release.yml
assets/: Fortnite.digest.verse  UnrealEngine.digest.verse  Verse.digest.verse
cache/: mod.rs
classify/: mod.rs
cli/: mod.rs
crates/mcp_server/: Cargo.toml
crates/mcp_server/src/: main.rs  tools.rs
digest/: mod.rs  parser.rs  search.rs  types.rs
fingerprint/: mod.rs
fortnite-docs-pages-canonical/: 30-00-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  30-10-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  30-30-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  30-40-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  31-10-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  31-20-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  31-30-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  31-40-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  31.00-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  31.md  32-00-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  32-10-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  33-00-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  33-10-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  33-20-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  33.30-fortnite-ecosystem-updates-and-release-notes-in-creative-and-unreal-editor-for-fortnite.md  33.md  34-00-fortnite-ecosystem-updates-and-release-notes.md  34-10-fortnite-ecosystem-updates-and-release-notes.md  34-20-fortnite-ecosystem-updates-and-release-notes.md  34-30-fortnite-ecosystem-updates-and-release-notes.md  34-40-fortnite-ecosystem-updates-and-release-notes.md  35-00-fortnite-ecosystem-updates-and-release-notes.md  35-10-fortnite-ecosystem-updates-and-release-notes.md  35-20-fortnite-ecosystem-updates-and-release-notes.md  37-00-fortnite-ecosystem-updates-and-release-notes.md  37-10-fortnite-ecosystem-updates-and-release-notes.md  37-20-fortnite-ecosystem-updates-and-release-notes.md  37-30-fortnite-ecosystem-updates-and-release-notes.md  37-40-fortnite-ecosystem-updates-and-release-notes.md  37-50-fortnite-ecosystem-updates-and-release-notes.md  38-00-fortnite-ecosystem-updates-and-release-notes.md  38-10-fortnite-ecosystem-updates-and-release-notes.md  39-00-fortnite-ecosystem-updates-and-release-notes.md  39-10-fortnite-ecosystem-updates-and-release-notes.md  39-20-fortnite-ecosystem-updates-and-release-notes.md  39-30-fortnite-ecosystem-updates-and-release-notes.md  39-40-fortnite-ecosystem-updates-and-release-notes.md  39-50-fortnite-ecosystem-updates-and-release-notes.md  5-rounds-of-econ-lessons-gameplay-example-in-fortnite-creative.md  (+894 more)
fortnite-docs-pages-canonical/-creative/: building-pre-game-lobbies-in-fortnite-creative.md  building-your-first-island-in-fortnite-creative.md  design-a-1v1-box-fight-in-fortnite-creative.md  event-browser-in-fortnite-creative.md  event.md  exploring-discover-in-fortnite-creative.md  exploring-the-sidebar-and-game-menu-in-fortnite-creative.md  fortnite-creative-glossary.md  function.md  how-to-design-a-game-in-fortnite-creative.md  iarc-overview-and-faqs-in-fortnite-creative.md  level-design-best-practices-in-fortnite-creative.md  monetization-and-analytics-in-fortnite-creative.md  onboarding-players-in-fortnite-creative.md  rename-a-device.md  replays-feature-in-fortnite-creative.md  skilled-interaction-device-design-examples.md  stat-creator-design-examples.md  switch-device-design-examples.md  using-advanced-storm-controller-devices-in-fortnite-creative.md  using-air-vent-devices-in-fortnite-creative.md  using-atk-spawner-devices-in-fortnite-creative.md  using-attribute-evaluator-devices-in-fortnite-creative.md  using-ball-spawner-devices-in-fortnite-creative.md  using-barrier-devices-in-fortnite-creative.md  using-basic-storm-controller-devices-in-fortnite-creative.md  using-beacon-devices-in-fortnite-creative.md  using-billboard-devices-in-fortnite-creative.md  using-boat-spawner-devices-in-fortnite-creative.md  (+40 more)
grapher/: generator.rs  mod.rs  types.rs
grounding_engine/: Cargo.toml  build.rs
grounding_engine/src/: lib.rs  scan.rs  workflows.rs
handler/: mod.rs
mcp_server/: Cargo.toml  build.rs
mcp_server/src/: docs_query.rs  main.rs  tools.rs  vm_dir.rs
parser/: mod.rs
scripts/: build_docs_db.py
template_manager/: mod.rs
tests/: mod.rs
tests/fixtures/: sample_digest.verse
tools/: digest_query.rs  graph.rs  mod.rs  scan.rs  template.rs  validation.rs
types/: device_types.rs  mod.rs
uasset_scan/: Cargo.toml
uasset_scan/src/: device_grapher.rs  digest.rs  fingerprint.rs  lib.rs  parser.rs  scanner_tests.rs  similarity.rs  template_manager.rs  types.rs  validator.rs  verse_validator.rs
uefn_scan_cli/: Cargo.toml
uefn_scan_cli/src/: main.rs
validator/: mod.rs
verse-api-pages-canonical/: _manifest.txt  fortnitedotcom.md  index.md  unrealenginedotcom.md  versedotorg.md
wiring_validator/: mod.rs  patterns.rs  types.rs  utils.rs  validator.rs  wiring.rs
workflows/: device-setup-diagnosis.md  digest-lookup.md  editable-audit.md  ui-wiring.md
(+1113 files in other folders)
