[workspace]
resolver = "2"
members = [
    "crates/uasset_scan",
    "crates/uefn_scan_cli",
    "crates/mcp_server",
]
exclude = [
    "spike-unreal-asset",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/verse-mcp"

[workspace.dependencies]
# Parsing
unreal_asset = { version = "0.1", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros"] }

# MCP
rmcp = "0.1"

# Utilities
walkdir = "2"
rayon = "1"
thiserror = "1"
anyhow = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
uasset_scan = { path = "crates/uasset_scan" }
