[workspace]
resolver = "2"
members = [
    "grounding_engine",
    "uasset_scan",
    "uefn_scan_cli",
    "mcp_server",
]
exclude = [
    "spike-unreal-asset",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/quangdang46/verse-mcp"

[workspace.dependencies]
# Parsing
unreal_asset = { version = "0.1", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros"] }

# MCP
rmcp = "0.1"

# Utilities
walkdir = "2"
rayon = "1"
thiserror = "1"
anyhow = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
uasset_scan = { path = "uasset_scan" }
grounding_engine = { path = "grounding_engine" }
