[package]
name = "grounding_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
uasset_scan = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[build-dependencies]
regex = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
walkdir = { workspace = true }
