[package]
name = "mcp_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vm"
path = "src/main.rs"


[dependencies]
grounding_engine = { workspace = true }
rmcp = { version = "0.1", features = ["server", "transport-io", "transport-sse-server"] }
tokio = { workspace = true, features = ["io-std", "rt-multi-thread", "macros", "signal"] }
tokio-util = "0.7"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
