[package]
name = "mcp_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vm"
path = "src/main.rs"


[dependencies]
grounding_engine = { workspace = true }
rmcp = { version = "1.3", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { workspace = true, features = ["io-std", "rt-multi-thread", "macros", "signal"] }
tokio-util = "0.7"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
