[package]
name = "uasset_scan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
unreal_asset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
