[package]
name = "uefn_scan_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "verse-scan"
path = "src/main.rs"

[dependencies]
uasset_scan = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
