[package]
name = "mcp_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "verse-mcp"
path = "src/main.rs"

[dependencies]
uasset_scan = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
